# TinyForgeAI

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  SUMMARY.md  demo.py  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sitemap.xml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy_site.yml  deploy_site_netlify.yml  docker_build.yml  publish_pypi.yml
MODEL_ZOO/: README.md
MODEL_ZOO/example_tiny_model/: model_card.md  model_stub.json
announcement_article/: index.html
api_reference/: index.html
architecture/: index.html
backend/: config.py  exceptions.py  logging_setup.py  middleware.py  monitoring.py  webhooks.py
backend/api/: main.py
backend/augment/: __init__.py  generator.py  strategies.py
backend/evaluation/: __init__.py  benchmark.py  cli.py  evaluator.py  metrics.py
backend/exporter/: __init__.py  build.sh  builder.py  onnx_export.py  quantize.py
backend/model_registry/: __init__.py  cli.py  registry.py  versioning.py
backend/playground/: __init__.py  exporter.py  server.py
backend/training/: __init__.py  dataset.py  peft_adapter.py  real_trainer.py  train.py  utils.py
backend/url_trainer/: __init__.py  extractor.py  trainer.py
ci/: index.html
cli/: __init__.py  foremforge.py
connectors/: __init__.py  api_connector.py  async_api_connector.py  async_db_connector.py  async_google_drive_connector.py  async_notion_connector.py  async_slack_connector.py  cli.py  confluence_connector.py  db_config.py  db_connector.py  file_ingest.py  google_docs_connector.py  google_drive_connector.py  google_utils.py  index.html  indexer.py  mappers.py  notion_connector.py  slack_connector.py
dashboard/: README.md  app.js  index.html  package.json  styles.css
dashboard/src/: App.jsx
deploy/: README.md
deploy/aws/: README.md  cloudformation-eks.yaml
deploy/azure/: README.md
deploy/gcp/: README.md
deploy/helm-chart/: Chart.yaml  values.yaml
deploy/k8s/: configmap.yaml  dashboard-api.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml  training-worker.yaml
developer_onboarding/: index.html
docker/: Dockerfile.dashboard  Dockerfile.inference  Dockerfile.training  README.md  docker-compose.yml  init-db.sql  nginx.conf  prometheus.yml
docs/: COMMUNITY_ANNOUNCEMENT.md  CONTRIBUTING.md  announcement_article.md  api_reference.md  architecture.md  ci.md  ci_secrets_setup.md  configuration.md  connectors.md  developer_onboarding.md  github_discussions_setup.md  launch.md  mcp.md  release.md  social_launch_kit.md  training.md  use_cases.md
docs/tutorials/: 01-introduction-to-ai-training.md  02-preparing-training-data.md  03-training-your-first-model.md  04-understanding-lora.md  05-deploying-your-model.md
docs/wiki/: Beginners-Course.md  Hands-On-Tutorials.md  Home.md  README.md  Training-UIs.md
examples/: e2e_demo.py  e2e_demo.sh  sample_qna.jsonl
examples/confluence_samples/: spaces.json
examples/customer_support_bot/: README.md  deploy.py  prepare_data.py  requirements.txt  test_bot.py  train.py
examples/files/: sample.docx  sample.md  sample.txt
examples/google_docs_samples/: sample_doc1.txt  sample_doc2.txt
examples/google_drive_samples/: README.txt  qa_pairs.json  training_data.jsonl
examples/internal_knowledge_search/: README.md  index_documents.py  requirements.txt  search_service.py  test_search.py
examples/notion_samples/: README.txt  training_database.json
examples/rag/: quick_start_rag.py
examples/slack_samples/: channels.json  users.json
examples/technical_manual_assistant/: README.md  assistant_service.py  prepare_data.py  requirements.txt  test_assistant.py  train_assistant.py
examples/training/: custom_dataset.py  evaluation.py  lora_training.py  quick_start.py  sample_data.jsonl
examples/tutorial_data/: README.md  sample_faqs.csv  sample_training_data.jsonl
examples/use_cases/: knowledge_assistant_sample.jsonl  sop_workflow_sample.jsonl  summarization_sample.txt  support_automation_sample.jsonl
inference_server/: __init__.py  app.py  model_loader.py
launch/: index.html
mcp/: README.md  __init__.py  server.py
mcp/resources/: __init__.py  jobs.py  models.py
mcp/tools/: __init__.py  connectors.py  inference.py  (+2 more)
model_zoo/: __init__.py  cli.py  registry.py
playground/: README.md  app.py
release/: index.html
releases/: notes_initial_release.md  prepare_release.sh
scripts/: deploy_docs.sh  generate_openapi.py
search/: search_index.json
social_launch_kit/: index.html
tests/: conftest.py  test_ab_testing.py  test_api_connector.py  test_async_connectors.py  test_cli.py  test_cloud_deployments.py  test_config.py  test_configuration_doc.py  test_confluence_connector.py  test_dashboard_api.py  test_database.py  test_dataset.py  test_db_connector.py  test_docker_files.py  test_e2e_demo.py  test_e2e_demo_script.py  test_evaluation.py  test_exceptions.py  test_exporter.py  test_file_helpers.py  test_file_ingest.py  test_google_docs_connector.py  test_google_drive_connector.py  test_google_utils.py  test_health.py  test_indexer.py  test_inference_predict.py  test_k8s_manifests.py  test_mappers.py  test_metrics.py  test_model_registry.py  test_model_zoo.py  test_monitoring.py  test_multitenant_inference.py  test_notion_connector.py  test_onnx_export.py  test_peft_adapter.py  test_playground.py  test_pre_commit_config.py  test_rate_limit.py  (+7 more)
training/: index.html
ui/: README.md
(+96 files in other folders)
