[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyforgeai"
version = "0.1.0"
description = "A lightweight platform for fine-tuning language models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TinyForgeAI Team"}
]
keywords = ["machine-learning", "fine-tuning", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
docs = [
    "python-docx",
    "PyMuPDF",
]

# Console scripts entry point for the CLI
# This allows 'foremforge' command after pip install -e .
[project.scripts]
foremforge = "cli.foremforge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "backend*", "connectors*", "inference_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
