[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyforgeai"
version = "0.3.0"
description = "A lightweight platform for fine-tuning language models and deploying them as inference microservices"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "TinyForgeAI Contributors"}
]
maintainers = [
    {name = "TinyForgeAI Contributors"}
]
keywords = [
    "machine-learning",
    "fine-tuning",
    "language-models",
    "inference",
    "microservices",
    "onnx",
    "lora",
    "peft"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "flake8>=6.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
]
docx = [
    "python-docx>=1.0.0",
]
training = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "accelerate>=0.24.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
all = [
    "tinyforgeai[dev,pdf,docx,training,rag]",
]

[project.scripts]
foremforge = "cli.foremforge:main"

[project.urls]
Homepage = "https://github.com/foremsoft/TinyForgeAI"
Documentation = "https://github.com/foremsoft/TinyForgeAI/wiki"
Repository = "https://github.com/foremsoft/TinyForgeAI"
Issues = "https://github.com/foremsoft/TinyForgeAI/issues"
Changelog = "https://github.com/foremsoft/TinyForgeAI/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "backend*", "connectors*", "inference_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --disable-warnings"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["backend", "connectors", "cli", "inference_server"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".eggs", ".venv"]
ignore = ["E203", "W503"]
