[metadata]
name = tinyforgeai
version = attr: tinyforgeai.__version__
description = A lightweight platform for fine-tuning language models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anthropics/TinyForgeAI
author = TinyForgeAI Contributors
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    click>=8.0.0
    fastapi>=0.100.0
    uvicorn>=0.20.0
    pydantic>=2.0.0
    pydantic-settings>=2.0.0
    python-dotenv>=1.0.0

[options.packages.find]
include =
    cli*
    backend*
    connectors*
    inference_server*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    httpx>=0.24.0
    flake8>=6.0.0

[options.entry_points]
console_scripts =
    foremforge = cli.foremforge:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs,.venv
ignore = E203,W503
